--- a/colon.cabal
+++ b/colon.cabal
@@ -22,7 +22,8 @@ library
         base ^>=4.17.2.1,
         containers >= 0.6.0 && < 0.7,
         mtl >= 2.2.2,
-        transformers >= 0.5.6.2
+        transformers >= 0.5.6.2,
+        parsec >= 3.1.16.1
     hs-source-dirs:   src
     default-language: Haskell2010
 
@@ -34,6 +35,7 @@ executable colon
         containers >= 0.6.0 && < 0.7,
         mtl >= 2.2.2,
         transformers >= 0.5.6.2,
+        parsec >= 3.1.16.1,
         colon
     hs-source-dirs:   app
     default-language: Haskell2010
@@ -49,4 +51,8 @@ test-suite colon-test
         containers >= 0.6.0 && < 0.7,
         mtl >= 2.2.2,
         transformers >= 0.5.6.2,
+        tasty,
+        tasty-hunit,
+        hunit,
+        parsec >= 3.1.16.1,
         colon
