--- a/dist-newstyle/packagedb/ghc-9.4.8/colon-0.1.0.0-inplace.conf
+++ b/dist-newstyle/packagedb/ghc-9.4.8/colon-0.1.0.0-inplace.conf
@@ -24,7 +24,8 @@ dynamic-library-dirs:
 data-dir:             /Users/rafaelkhammadeev/Developer/haskell/colon/.
 hs-libraries:         HScolon-0.1.0.0-inplace
 depends:
-    base-4.17.2.1 containers-0.6.7 mtl-2.2.2 transformers-0.5.6.2
+    base-4.17.2.1 containers-0.6.7 mtl-2.2.2 parsec-3.1.16.1
+    transformers-0.5.6.2
 
 haddock-interfaces:
     /Users/rafaelkhammadeev/Developer/haskell/colon/dist-newstyle/build/aarch64-osx/ghc-9.4.8/colon-0.1.0.0/doc/html/colon/colon.haddock
